manifests/odysseus/ntfy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
        - name: ntfy
          image: docker.io/binwiederhier/ntfy:latest
          imagePullPolicy: IfNotPresent
          command:
            - ntfy
            - serve
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /v1/health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /v1/health
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: ntfy-cache
              mountPath: /var/cache/ntfy
      volumes:
        - name: ntfy-cache
          persistentVolumeClaim:
            claimName: ntfy-cache
