manifests/odysseus/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odysseus
spec:
  selector:
    app: odysseus
  ports:
    - name: http
      port: 7000
      targetPort: 7000
  type: ClusterIP
