manifests/odysseus/ntfy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  selector:
    app: ntfy
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
